--- a/includes/bank.pug
+++ b/includes/bank.pug
@@ -13,13 +13,13 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-warning ПОЛЕЗНОЕ
+          span.badge.badge-warning КОРИСНЕ
         ul
           li
             div.icon.ubki.ua
             a(href='https://www.ubki.ua/ru/', target='_blank') ubki.ua
-            span.opisi Кредит ИНФО
-            div.icontooinfo.a0repa3(title='Тут можно узнать сумы про все ВАШИ кредиты. Один раз в год предоставляется бесплатн, повторный заказ — 50 грн. Украинское бюро кредитных историй - крупнейшее бюро в Украине ', alt='')
+            span.opisi Кредит ІНФО
+            div.icontooinfo.a0repa3(title='Тут можна дізнатися суми про всі ваші кредити. Раз на рік надається безкоштовне, повторне замовлення — 50 грн. Українське бюро кредитних історій – найбільше бюро в Україні', alt='')
       .group
         .group-title
           span.badge.badge-success Курс/Конвертер валют
@@ -35,7 +35,7 @@ block content
             a(href='https://minfin.com.ua/currency/', target='_blank') minfin.com.ua
       .group
         .group-title
-          span.badge.badge-success Обмен валют
+          span.badge.badge-success Обмін валют
         ul
           li
             div.icon.bestchange.ru
@@ -48,26 +48,26 @@ block content
             a(href='https://old.kurs.com.ua/webmoney', target='_blank') old.kurs.com.ua
       .group
         .group-title
-          span.badge.badge-success Торговые площадки криптовалюты
+          span.badge.badge-success Торгові майданчики криптовалюти
         ul    
           li
             div.icon.tradingview_com
             a(href='https://ru.tradingview.com/', target='_blank') tradingview.com
-            div.icontooinfo.a0repa3(title='Раздел-Банкинг. Полезный инструмент - графики акций, индексов, фьючерсов, Форекс и биткоин в реальном времени на TradingView', alt='')        
+            div.icontooinfo.a0repa3(title='Розділ-банкінг. Корисний інструмент - графіки акцій, індексів, фючерсів, Форекс та біткоін у реальному часі на TradingView', alt='')        
           li
             div.icon.binance_com
             a(href='https://www.binance.com/?ref=36762801', target='_blank') binance.com`
-            div.icontooinfo.a0repa3(title='Раздел-Банкинг. ТОП биржа и трейдинг платформа криптовалют', alt='')
+            div.icontooinfo.a0repa3(title='Розділ-банкінг. ТОП біржа та трейдинг платформа криптовалют', alt='')
           li
             div.icon.exmo_com
             a(href='https://exmo.com/?ref=1654818', target='_blank') exmo.com`
-            div.icontooinfo.a0repa3(title='Раздел-Банкинг. ТОП биткоин биржа и трейдинг платформа. Возможность работы с грн. руб. visa, mastercart', alt='')
+            div.icontooinfo.a0repa3(title='Розділ-банкінг. ТОП біткоїн біржа та трейдинг платформа. Можливість роботи з грн. руб. visa, mastercart', alt='')
           li
             div.icon.bitfinex.com
             a(href='https://www.bitfinex.com/?locale=ru', target='_blank') bitfinex.com
       .group
         .group-title
-          span.badge.badge-success Рейтинг банков Украины
+          span.badge.badge-success Рейтинг банків України
         ul
           li
             div.icon.minfin.com.ua
@@ -120,7 +120,7 @@ block content
             span.opisi Онлайн
       .group
         .group-title
-          span.badge.badge-success Страхование/Кредит/Финансы
+          span.badge.badge-success Страхування/Кредит/Фінанси
         ul
           li
             div.icon.alfabank.ua
@@ -137,7 +137,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-success Интернет КОШЕЛЕК
+          span.badge.badge-success Інтернет гаманець
         ul
           li
             div.icon.payoneer.com
