--- a/includes/city.pug
+++ b/includes/city.pug
@@ -40,7 +40,7 @@ block content
             a(href='https://www.gismeteo.ua/weather-novomyrhorod-12104/gm/', target='_blank') Погода_Gismeteo
           li
             div.icon.vk.com
-            a(href='https://vk.com/novomyrhorod_baraholka', target='_blank') БАРАХОЛКА (рынок)
+            a(href='https://vk.com/novomyrhorod_baraholka', target='_blank') БАРАХОЛКА (ринок)
             div.icontoo.a0VPN1(title='Для роботи потрібний VPN', alt='')
           li
             div.icon.youtube
@@ -102,7 +102,7 @@ block content
         ul
           li
             div.icon.google
-            a(href='https://www.google.com.ua/', target='_blank') здесь будет инфо по городу №2
+            a(href='https://www.google.com.ua/', target='_blank') тут буде інфо для міста №2
     .col-sm
       .group
         .group-title
@@ -110,4 +110,4 @@ block content
         ul
           li
             div.icon.google
-            a(href='https://www.google.com.ua/', target='_blank') здесь будет инфо по городу №3
+            a(href='https://www.google.com.ua/', target='_blank') тут буде інфо для міста №3
