--- a/includes/market.pug
+++ b/includes/market.pug
@@ -13,7 +13,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-warning Отследить посылку (по почте)
+          span.badge.badge-warning Відстежити відправлення
         ul
           li
             div.icon.novaposhta.ua
@@ -29,7 +29,7 @@ block content
             a(href='https://www.meest-express.com.ua/ua/', target='_blank') meest-express.com.ua
       .group
         .group-title
-          span.badge.badge-warning Безопасность-база мошенников
+          span.badge.badge-warning Безпека-база шахраїв
         ul
           li
             div.icon.bazaukraferistov.com
@@ -52,7 +52,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-success Доска объявлений-ВСЯКОЕ
+          span.badge.badge-success Дошка оголошень-БУДЬ-ЯКЕ
         ul
           li
             div.icon.olx.ua
@@ -71,7 +71,7 @@ block content
             a(href='https://www.ria.com/', target='_blank') ria.com
       .group
         .group-title
-          span.badge.badge-success Доска объявлений-ОДЕЖДА/ОБУВЬ
+          span.badge.badge-success Дошка оголошень-ОДЯГ/ВЗУТТЯ
         ul
           li
             div.icon.shafa.ua
@@ -81,7 +81,7 @@ block content
             a(href='https://www.kidstaff.com.ua/', target='_blank') kidstaff.com.ua
       .group
         .group-title
-          span.badge.badge-success Доска объявлений-АВТО/МОТО
+          span.badge.badge-success Дошка оголошень-АВТО/МОТО
         ul
           li
             div.icon.auto.ria.com
@@ -92,11 +92,11 @@ block content
           li
             div.icon.avto.pro
             a(href='https://avto.pro/', target='_blank') avto.pro
-            div.icontooinfo.a0repa7(title='Автозапчасти без посредников. АвтоПро - площадка для продажи и покупки запчастей для иномарок, новые и бу запчасти, выгодные цены на авторазборках.', alt='')
+            div.icontooinfo.a0repa7(title='Автозапчастини без посередників. АвтоПро - майданчик для продажу та купівлі запчастин для іномарок, нові та бу запчастини, вигідні ціни на авторозбірках.', alt='')
     .col-sm
       .group
         .group-title
-          span.badge.badge-success Работа в Украине
+          span.badge.badge-success Робота в Україні
         ul
           li
             div.icon.work.ua
@@ -106,7 +106,7 @@ block content
             a(href='https://rabota.ua/', target='_blank') rabota.ua
       .group
         .group-title
-          span.badge.badge-success Аукционы
+          span.badge.badge-success Аукціони
         ul
           li
             div.icon.skylots.org
