--- a/includes/others.pug
+++ b/includes/others.pug
@@ -13,7 +13,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-success Анализатор ИНТЕРНЕТ соединения
+          span.badge.badge-success Аналізатор ІНТЕРНЕТ з'єднання
         ul
           li
             div.icon.speed1
@@ -35,7 +35,7 @@ block content
             a(href='https://2ip.ru/', target='_blank') 2ip.ru
       .group
         .group-title
-          span.badge.badge-success Поисковики
+          span.badge.badge-success Пошуковики
         ul
           li
             div.icon.google
@@ -55,11 +55,11 @@ block content
           li
             div.icon.yandex
             a(href='https://yandex.ua/', target='_blank') Yandex
-            span.opisi нужен VPN
+            span.opisi потрібен VPN
           li
             div.icon.e.mail.ru
             a(href='https://mail.ru/', target='_blank') Mail.ru
-            span.opisi нужен VPN
+            span.opisi потрібен VPN
           li
             div.icon.rambler.ru
             a(href='https://www.rambler.ru/', target='_blank') Rambler.ru
@@ -83,14 +83,14 @@ block content
             a(href='https://shukalka.com.ua/', target='_blank') Shukalka.com.ua
       .group
         .group-title
-          span.badge.badge-success Переводчики
+          span.badge.badge-success Перекладачі
         ul
           li
             div.icon.translate.google.com.ua
-            a(href='https://translate.google.com.ua/', target='_blank') Переводчик Google
+            a(href='https://translate.google.com.ua/', target='_blank') Перекладач Google
           li
             div.icon.translate.ru
-            a(href='https://www.translate.ru/', target='_blank') Переводчик PROMT
+            a(href='https://www.translate.ru/', target='_blank') Перекладач PROMT
       .group
         .group-title
           span.badge.badge-success Граматика
@@ -101,17 +101,17 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-warning Торрент-программы
+          span.badge.badge-warning Торрент-програми
         ul
           li
             div.icon.utorrent.com
-            a(href='https://www.utorrent.com/intl/ru/desktop/', target='_blank') Скачать utorrent
+            a(href='https://www.utorrent.com/intl/ru/desktop/', target='_blank') Завантажити utorrent
           li
             div.icon.acestream.org
-            a(href='http://www.acestream.org/', target='_blank') Скачать Acestream плеер
+            a(href='http://www.acestream.org/', target='_blank') Завантажити Acestream плеєр
       .group
         .group-title
-          span.badge.badge-success Торрент-трекеры
+          span.badge.badge-success Торрент-трекери
         ul
           li
             div.icon.rutracker.org
@@ -119,22 +119,22 @@ block content
           li
             div.icon.nnmclub.to
             a(href='http://nnmclub.to/', target='_blank') nnmclub.to
-            span.opisi возможно VPN
+            span.opisi потрібен VPN
           li
             div.icon.utorrent.com
             a(href='http://newtorrent.org/', target='_blank') newtorrent.org
           li
             div.icon.filmitorrent
             a(href='http://filmitorrent.net/', target='_blank') filmitorrent
-            span.opisi ТОП фильмы
+            span.opisi ТОП фільми
           li
             div.icon.pb.wtf
             a(href='https://pb.wtf/', target='_blank') pb.wtf
-            span.opisi фильмы
+            span.opisi фільми
           li
             div.icon.torrent-filmi.net
             a(href='http://torrent-filmi.net/', target='_blank') torrent-filmi.net
-            span.opisi фильмы
+            span.opisi фільми
           li
             div.icon.lostfilm.tv
             a(href='https://www.lostfilm.tv/', target='_blank') lostfilm.tv
@@ -143,7 +143,7 @@ block content
             a(href='http://rutor.info/', target='_blank') rutor.info
       .group
         .group-title
-          span.badge.badge-success Карты
+          span.badge.badge-success Карти
         ul
           li
             div.icon.google.maps
@@ -151,43 +151,43 @@ block content
           li
             div.icon.yandex_maps
             a(href='https://yandex.ua/maps/', target='_blank') yandex_maps
-            span.opisi нужен VPN
+            span.opisi потрібен VPN
           li
             div.icon.maps.visicom.ua
             a(href='https://maps.visicom.ua/', target='_blank') maps.visicom.ua
       .group
         .group-title
-          span.badge.badge-success Интернет хранилище для ВАС (облако)
+          span.badge.badge-success Інтернет сховище для ВАС (хмара)
         ul
           li
             div.icon.mega.nz
             a(href='https://mega.nz/', target='_blank') mega.nz
-            span.opisi получите 50 ГБ
+            span.opisi отримайте 50 ГБ
           li
             div.icon.drive.google.com
             a(href='https://drive.google.com/drive/', target='_blank') drive.google.com
-            span.opisi получите 15 ГБ
+            span.opisi отримайте 15 ГБ
           li
             div.icon.dropbox.com
             a(href='https://www.dropbox.com/ru/', target='_blank') dropbox.com
-            span.opisi получите 2-5 ГБ
+            span.opisi отримайте 2-5 ГБ
     .col-sm
       .group
         .group-title
-          span.badge.badge-success Религия
+          span.badge.badge-success Релігія
         ul
           li
             div.icon.bibleonline.ru
             a(href='https://www.bibleonline.ru/', target='_blank') bibleonline.ru
-            span.opisi Библия онлайн
+            span.opisi Біблія онлайн
           li
             div.icon.bible-teka.com
             a(href='https://bible-teka.com/synodal/', target='_blank') bible-teka.com
-            span.opisi Библия онлайн
+            span.opisi Біблія онлайн
           li
             div.icon.bible.by
             a(href='https://bible.by/', target='_blank') bible.by
-            span.opisi Библия онлайн
+            span.opisi Біблія онлайн
           li
             div.icon.slovohrista.org
             a(href='http://slovohrista.org/', target='_blank') slovohrista.org
@@ -196,32 +196,32 @@ block content
             a(href='http://slovo50.at.ua/', target='_blank') slovo50.at.ua
       .group
         .group-title
-          span.badge.badge-success Всякое
+          span.badge.badge-success Всяке
         ul
           li
             div.icon.wikipedia.org
             a(href='https://ru.wikipedia.org/', target='_blank') wikipedia
-            span.opisi Свободная энциклопедия
+            span.opisi Вільна енциклопедія
           li
             div.icon.a1000.menu
             a(href='https://1000.menu/', target='_blank') 1000.menu
-            span.opisi Вкусные домашние рецепты
+            span.opisi Смачні домашні рецепти
           li
             div.icon.remontcompa.ru
             a(href='https://remontcompa.ru/', target='_blank') remontcompa
-            span.opisi Энциклопедия Windows
+            span.opisi Енциклопедія Windows
           li
             div.icon.passmark.com
             a(href='https://www.passmark.com/', target='_blank') passmark
-            span.opisi Сравнение комп.железа
+            span.opisi Порівняння комплектуючих
           li
             div.icon.roomtodo.com
             a(href='https://roomtodo.com/', target='_blank') roomtodo.com
-            span.opisi Дизайну інтер'єру 3D
+            span.opisi Дизайн інтерєру 3D
           li
             div.icon.prnt.sc
             a(href='https://prnt.sc/', target='_blank') Lightshot
-            span.opisi Инструмент для скриншотов
+            span.opisi Інструмент для скріншотів
           li
             div.icon.onlinetimer
             a(href='https://onlinetimer.ru/', target='_blank') onlinetimer
@@ -229,12 +229,12 @@ block content
           li
             div.icon.time.in.ua
             a(href='http://time.in.ua/', target='_blank') time.in.ua
-            span.opisi Точное время
+            span.opisi Точний час
           li
             div.icon.ntp-servers.net
             a(href='https://www.ntp-servers.net/', target='_blank') ntp-servers
-            span.opisi Свободная энциклопедия
+            span.opisi Вільна енциклопедія
           li
             div.icon.vshkole.com
             a(href='https://vshkole.com/', target='_blank') vshkole.com
-            span.opisi ГДЗ/решебники/учебники
+            span.opisi ГДЗ/грашники/підручники
