--- a/includes/programs.pug
+++ b/includes/programs.pug
@@ -13,54 +13,54 @@ block content
     .col-sm
       .group
         .group-title.prog-title
-          div.badge.badge-danger Пароль на архивы: zakladki
+          div.badge.badge-danger Пароль на архіви: zakladki
 
-          span.badge.badge-warning Интернет-хранилище файлов
+          span.badge.badge-warning Інтернет-сховище файлів
         ul
           li
             div.icon.costaction.com
-            a(href='http://costaction.com/partner/?PHPSESUD=CEADEE4DA51FAECA3ED6C17C6A9191A5', target='_blank') Хранилище файлов`
-            div.icontooinfo.a0repa3(title='Раздел-Программы. Вы будете получать деньги за каждое скачивание Вашего файла. Просто загрузите файлы на Turbobit.net и Hitfile.net, обменивайтесь ими со своим друзьями, и незнакомцами через блоги, социальные сети, форумы или свои сайты!', alt='')
+            a(href='http://costaction.com/partner/?PHPSESUD=CEADEE4DA51FAECA3ED6C17C6A9191A5', target='_blank') Сховище файлів`
+            div.icontooinfo.a0repa3(title='Розділ-програми. Ви отримуватимете гроші за кожне скачування Вашого файлу. Просто завантажте файли на Turbobit.net та Hitfile.net, обмінюйтеся ними зі своїми друзями та незнайомцями через блоги, соціальні мережі, форуми або свої сайти!', alt='')
 
       .group
         .group-title
-          span.badge.badge-warning Всякие настройки
+          span.badge.badge-warning Всілякі налаштування
         ul
           li
             div.icon.a0youtubeinform(title='Відео інформація', alt='')
-            a(href='https://youtu.be/BdZQy6upWFc', target='_blank') Настройка сайта ZAKLADOK
-            div.icontooinfo.a0repa3(title='Как быстро настроить ZAKLADKI на компьютере, ноутбуке, смартфоне', alt='')
+            a(href='https://youtu.be/BdZQy6upWFc', target='_blank') Настройка сайта ЗАКЛАДОК
+            div.icontooinfo.a0repa3(title='Як швидко налаштувати ЗАКЛАДКИ на компютері, ноутбуці, смартфоні', alt='')
       .group
         .group-title
-          span.badge.badge-warning Торрент-программы
+          span.badge.badge-warning Торрент-програми
         ul
           li
             div.icon.utorrent.com
-            a(href='https://www.utorrent.com/intl/ru/desktop/', target='_blank') Скачать utorrent
+            a(href='https://www.utorrent.com/intl/ru/desktop/', target='_blank') Завантажити utorrent
           li
             div.icon.acestream.org
-            a(href='http://www.acestream.org/', target='_blank') Скачать Acestream плеер
+            a(href='http://www.acestream.org/', target='_blank') Завантажити Acestream плеер
       .group
         .group-title
-          span.badge.badge-warning Загрузить мессенджеры
+          span.badge.badge-warning Завантажити месенджери
         ul
           li
             div.icon.telegram
-            a(href='https://tlgrm.ru/apps', target='_blank') Скачать TELEGRAM
+            a(href='https://tlgrm.ru/apps', target='_blank') Завантажити TELEGRAM
           li
             div.icon.viber
-            a(href='https://www.viber.com/ru/download/', target='_blank') Скачать VIBER
+            a(href='https://www.viber.com/ru/download/', target='_blank') Завантажити VIBER
           li
             div.icon.skype
-            a(href='https://www.skype.com/ru/get-skype/', target='_blank') Скачать SKYPE
+            a(href='https://www.skype.com/ru/get-skype/', target='_blank') Завантажити SKYPE
       .group
         .group-title
-          span.badge.badge-warning Загрузить браузеры
+          span.badge.badge-warning Завантажити браузери
         ul
           li
             div.icon.CryptoTab
             a(href='https://cryptotabbrowser.com/17032365', target='_blank') CryptoTab`
-            div.icontooinfo.a0repa3(title='Это браузер для работы и паралельного майнинга биткоинов. Вы в интернете, и Вам понемногу капает Bitcoin', alt='')
+            div.icontooinfo.a0repa3(title='Це браузер для роботи та паралельного майнінгу біткоїнів. Ви в інтернеті і Вам потроху капає Bitcoin', alt='')
           li
             div.icon.prog_GoogleChrome
             a(href='https://www.google.com/intl/ru_ALL/chrome/', target='_blank') Google Chrome
@@ -72,7 +72,7 @@ block content
             a(href='https://www.mozilla.org/uk/firefox/new/', target='_blank') Mozilla Firefox
       .group
         .group-title
-          span.badge.badge-warning Для браузеров веб-плеер
+          span.badge.badge-warning Для браузерів веб-плеєр
         ul
           li
             div.icon.prog_AdobeFlashPlayer
@@ -81,7 +81,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-warning Архиваторы
+          span.badge.badge-warning Архіватори
         ul
           li
             div.icon.prog_7zip
@@ -92,103 +92,103 @@ block content
           li
             div.icon.prog_winrar
             a(href='https://drive.google.com/open?id=1vDBqhWCzqkNTlfd8IKr1i9QX7fATYTuU', target='_blank') WinRAR 5.70
-            div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
+            div.icontooinfo.a0zippass(title='заархівовано/пароль: zakladki')
       .group
         .group-title
-          span.badge.badge-warning Проигрыватель
+          span.badge.badge-warning Програвач
         ul
           li
             div.icon.prog_Aimp
             a(href='https://drive.google.com/open?id=1OqFi7OJjL5FZKjSC_FC3gRbOqsE3sNV-', target='_blank') Aimp (+radio+skin)
-            div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
+            div.icontooinfo.a0zippass(title='заархівовано/пароль: zakladki')
       .group
         .group-title
-          span.badge.badge-warning Скриншотер
+          span.badge.badge-warning Скріншотер
         ul
           li
             div.icon.prog_FastStone
             a(href='https://drive.google.com/open?id=1isVYJIBqRhk3ON5CIlUVBb1SO1wyepv7', target='_blank') FastStone.Capture_portable
-            div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
+            div.icontooinfo.a0zippass(title='заархівовано/пароль: zakladki')
                       
     .col-sm
       .group
         .group-title
-          span.badge.badge-warning Удаленное управление компютером
+          span.badge.badge-warning Віддалене керування компютером
         ul
           li
             div.icon.ammyy_admin
             a(href='https://drive.google.com/open?id=1BEIar3Ge5aw_uDY5isKTNZ5l_4BWD2Nj', target='_blank') Ammyy_admin3.8
-            div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
+            div.icontooinfo.a0zippass(title='заархівовано/пароль: zakladki')
           li
             div.icon.ammyy_admin
             a(href='https://drive.google.com/open?id=1Yp0_ko_FNcsMm6gMd0vffeMIchArFWD6', target='_blank') Ammyy_admin3.7
-            div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
+            div.icontooinfo.a0zippass(title='заархівовано/пароль: zakladki')
           li
             div.icon.TeamViewer
             a(href='https://drive.google.com/open?id=1ZTJCd2kIU_HOxJe_wQ8nMOxVbytjNnVJ', target='_blank') TeamViewer.14.Portable
-            div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
+            div.icontooinfo.a0zippass(title='заархівовано/пароль: zakladki')
       .group
         .group-title
-          span.badge.badge-warning Очистка компютера (+автозапуск)
+          span.badge.badge-warning Очищення комп'ютера (автозапуск)
         ul
           li
             div.icon.prog_ccleaner
             a(href='https://drive.google.com/open?id=1SRFx7hNjMrxysVsD2PSFeXjI7XEn7GLe', target='_blank') CCleaner_5.55.7108
-            div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
+            div.icontooinfo.a0zippass(title='заархівовано/пароль: zakladki')
           li
             div.icon.prog_regorganizer
             a(href='https://drive.google.com/open?id=1JL9K_7YX73tGfGFaUMP-1cxG-RmDubHg', target='_blank') RegOrganizer_8.26
-            div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
+            div.icontooinfo.a0zippass(title='заархівовано/пароль: zakladki')
       .group
         .group-title
-          span.badge.badge-warning Анализ, тест и мониторинг компьютера
+          span.badge.badge-warning Аналіз, тест та моніторинг комп'ютера
         ul
           li
             div.icon.prog_AIDA64
             a(href='https://drive.google.com/open?id=11pfy__qDlI79InKldhfoDBCLFo0kHDN-', target='_blank') AIDA64
-            div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
+            div.icontooinfo.a0zippass(title='заархівовано/пароль: zakladki')
           li
             div.icon.prog_hwmonitor
             a(href='https://drive.google.com/open?id=1tyknLqKcjkOZvMix-MWBfxDJOkrIkMfU', target='_blank') HWMonitor
-            div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
+            div.icontooinfo.a0zippass(title='заархівовано/пароль: zakladki')
       .group
         .group-title
-          span.badge.badge-warning Антивирусники
+          span.badge.badge-warning Антивірусні програми
         ul
           li
             div.icon.prog.tnod32.info
             a(href='https://drive.google.com/open?id=18kmNLxOR2ywf7gBrjvNXZDj9kyHJ_Pgr', target='_blank') NOD32_8.0.319.1_RePack
-            div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
-            div.icontooinfo.a0repa3(title='Антивирус для СЛАБЫХ ПК с оперативкой меньше 1Гб и одноядерным процом ESET NOD32 Antivirus _ Smart Security 8.0.319.1 RePack by KpoJIuK (21.12.2018)+++', alt='')
+            div.icontooinfo.a0zippass(title='заархівовано/пароль: zakladki')
+            div.icontooinfo.a0repa3(title='Антивірус для СЛАБИХ ПК з оперативкою менше 1Гб і одноядерним процом ESET NOD32 Antivirus _ Smart Security 8.0.319.1 RePack by KpoJIuK (21.12.2018)', alt='')
           li
             div.icon.prog_Avast
-            a(href='https://drive.google.com/open?id=16b8dyNNdl1K6sqlm-LrEQyljQQqGA2JK', target='_blank') Avast (онлайн установщик)
-            div.icontooinfo.a0repa3(title='Антивирус', alt='')
+            a(href='https://drive.google.com/open?id=16b8dyNNdl1K6sqlm-LrEQyljQQqGA2JK', target='_blank') Avast (онлайн інсталятор)
+            div.icontooinfo.a0repa3(title='Антивірус', alt='')
           li
             div.icon.prog_Avira
-            a(href='https://drive.google.com/open?id=19tidcXcvgfebelkOiYyzpuYgLdeBnBVD', target='_blank') Avira (онлайн установщик)
-            div.icontooinfo.a0repa3(title='Антивирус', alt='')
+            a(href='https://drive.google.com/open?id=19tidcXcvgfebelkOiYyzpuYgLdeBnBVD', target='_blank') Avira (онлайн інсталятор)
+            div.icontooinfo.a0repa3(title='Антивірус', alt='')
           li
             div.icon.prog_360TS
-            a(href='https://drive.google.com/open?id=1YPrQwzphC1AM4TQT5shTsT8sXjYlLImC', target='_blank') 360TS (онлайн установщик)
-            div.icontooinfo.a0repa3(title='Антивирус', alt='')
+            a(href='https://drive.google.com/open?id=1YPrQwzphC1AM4TQT5shTsT8sXjYlLImC', target='_blank') 360TS (онлайн інсталятор)
+            div.icontooinfo.a0repa3(title='Антивірус', alt='')
           li
             div.icon.prog_DrWeb
             a(href='https://drive.google.com/open?id=1HGiSm0B7IovrJi8s7RN_36MpL36U81W0', target='_blank') Dr.Web_CureIt
-            div.icontooinfo.a0repa3(title='Одноразовая/портативная утилита для проверки ПК', alt='')
+            div.icontooinfo.a0repa3(title='Одноразова/портативна утиліта для перевірки ПК', alt='')
       .group
         .group-title
-          span.badge.badge-warning Для N.O.D.32 продление лицензии
+          span.badge.badge-warning Для N.O.D.32 продовження ліцензії
         ul
           li
             div.icon.prog.tnod32
-            a(href='https://drive.google.com/open?id=1_n2xbV1wT7c0g-oxDLwTx3wS_RlnXB-2', target='_blank') TNod_СТАРЫЕ_версии
-            div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
+            a(href='https://drive.google.com/open?id=1_n2xbV1wT7c0g-oxDLwTx3wS_RlnXB-2', target='_blank') TNod_СТАРІ_версії
+            div.icontooinfo.a0zippass(title='заархівовано/пароль: zakladki')
           li
             div.icon.prog.tnod32
             a(href='https://drive.google.com/open?id=1AodVQ5PclVVuKgKfW7tSNTsfV--jpvOR', target='_blank') TNod_1.6.7.0
-            div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
+            div.icontooinfo.a0zippass(title='заархівовано/пароль: zakladki')
           li
             div.icon.prog.tnod32.info
-            a(href='https://drive.google.com/open?id=1Kr8mzGBbQ5w62JhPid9t2jSprhH1BZ6W', target='_blank') Инструкции для N.O.D.32 ESET
-            div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
+            a(href='https://drive.google.com/open?id=1Kr8mzGBbQ5w62JhPid9t2jSprhH1BZ6W', target='_blank') Інструкції для N.O.D.32 ESET
+            div.icontooinfo.a0zippass(title='заархівовано/пароль: zakladki')
