--- a/includes/communal.pug
+++ b/includes/communal.pug
@@ -26,11 +26,11 @@ block content
           li
             div.icon.minfin.com.ua
             a(href='https://index.minfin.com.ua/tariff/gas/', target='_blank') minfin.com.ua
-            span.opisi офц.цена.газ
+            span.opisi офц.ціна.газ
           li
             div.icon.prostobank.ua
             a(href='http://www.prostobank.ua/spravochniki/indikatory_rynka/gas_tariff', target='_blank') prostobank.ua
-            span.opisi цена.газ
+            span.opisi ціна.газ
           li
             div.icon.naftogazpostach.com
             a(href='https://gas.ua/', target='_blank') naftogaz
@@ -50,11 +50,11 @@ block content
           li
             div.icon.minfin.com.ua
             a(href='https://index.minfin.com.ua/tariff/electric/', target='_blank') minfin.com.ua
-            span.opisi офц.цена.электр.
+            span.opisi офц.ціна.електр.
           li
             div.icon.prostobank.ua
             a(href='http://www.prostobank.ua/spravochniki/indikatory_rynka/electric_tariff', target='_blank') prostobank.ua
-            span.opisi цена.электр.
+            span.opisi ціна.електр.
           li
             div.icon.kresc.com.ua
             a(href='https://www.kresc.com.ua/', target='_blank') kresc.com.ua
@@ -83,7 +83,7 @@ block content
           li
             div.icon.maanimo.com
             a(href='https://maanimo.com/indexes/140162-tarify-na-vodu-dlya-naseleniya-v-ukraine', target='_blank') maanimo.com
-            span.opisi Цена.вода.Укр.
+            span.opisi ціна.вода.Укр.
       .group
         .group-title
           span.badge.badge-success Опалення
@@ -92,7 +92,7 @@ block content
           li
             div.icon.maanimo.com
             a(href='https://maanimo.com/indexes/142540-tarify-na-otoplenie-v-ukraine-sezon-2017-2018', target='_blank') maanimo.com
-            span.opisi Цена.опал.Укр.
+            span.opisi ціна.опал.Укр.
     .col-sm
       .group
         .group-title
