--- a/includes/games.pug
+++ b/includes/games.pug
@@ -4,7 +4,7 @@ block title
   title Ігри - ЗАКЛАДКИ - Список популярних сайтів (ТОП ЗАКЛАДКИ)
 
 block menu
-  - var current = 'Игры'
+  - var current = 'Ігри'
   - var current_iclass = 'games'
   include _nav.pug
   
