--- a/includes/market.pug
+++ b/includes/market.pug
@@ -4,7 +4,7 @@ block title
   title Ринок - ЗАКЛАДКИ - Список популярних сайтів (ТОП ЗАКЛАДКИ)
 
 block menu
-  - var current = 'Рынок'
+  - var current = 'Ринок'
   - var current_iclass = 'market'
   include _nav.pug
 
