--- a/includes/media.pug
+++ b/includes/media.pug
@@ -4,7 +4,7 @@ block title
   title Медіа - ЗАКЛАДКИ - Список популярних сайтів (ТОП ЗАКЛАДКИ)
 
 block menu
-  - var current = 'Медиа'
+  - var current = 'Медіа'
   - var current_iclass = 'media'
   include _nav.pug
 
@@ -41,7 +41,7 @@ block content
 
           li
             div.icon.web.telegram.org
-            a() Еще музыка:  
+            a() Ще музика:  
             a(href='https://t.me/music_hitok', target='_blank') _music_HitOK_
             i.fainfo.fab.fa-telegram
             
@@ -103,7 +103,7 @@ block content
         
           li
             div.icon.web.telegram.org
-            a() Еще музыка:  
+            a() Ще музика:  
             a(href='https://t.me/music_hitok_ua', target='_blank') _music_HitOK_UA
             i.fainfo.fab.fa-telegram
         
@@ -166,7 +166,7 @@ block content
 
           li
             div.icon.web.telegram.org
-            a() Еще музыка:  
+            a() Ще музика:  
             a(href='https://t.me/music_hitok_ru', target='_blank') _music_HitOK_RU
             i.fainfo.fab.fa-telegram
 
