--- a/includes/news.pug
+++ b/includes/news.pug
@@ -4,7 +4,7 @@ block title
   title Новини - ЗАКЛАДКИ - Список популярних сайтів (ТОП ЗАКЛАДКИ)
   
 block menu
-  - var current = 'Новости'
+  - var current = 'Новини'
   - var current_iclass = 'news'
   include _nav.pug
   
