--- a/includes/others.pug
+++ b/includes/others.pug
@@ -4,7 +4,7 @@ block title
   title Інше - ЗАКЛАДКИ - Список популярних сайтів (ТОП ЗАКЛАДКИ)
 
 block menu
-  - var current = 'Другое'
+  - var current = 'Інше'
   - var current_iclass = 'others'
   include _nav.pug
 
