--- a/includes/programs.pug
+++ b/includes/programs.pug
@@ -4,7 +4,7 @@ block title
   title Программи - ЗАКЛАДКИ - Список популярних сайтів (ТОП ЗАКЛАДКИ)
 
 block menu
-  - var current = 'Программы'
+  - var current = 'Програми'
   - var current_iclass = 'fas fa-microchip'
   include _nav.pug
 
