--- a/includes/shops.pug
+++ b/includes/shops.pug
@@ -4,7 +4,7 @@ block title
   title Магазини - ЗАКЛАДКИ - Список популярних сайтів (ТОП ЗАКЛАДКИ)
 
 block menu
-  - var current = 'Магазины'
+  - var current = 'Магазини'
   - var current_iclass = 'shops'
   include _nav.pug
 
