--- a/includes/bank.pug
+++ b/includes/bank.pug
@@ -4,7 +4,7 @@ block title
   title Банкінг - ЗАКЛАДКИ - Список популярних сайтів (ТОП ЗАКЛАДКИ)
 
 block menu
-  - var current = 'Банкинг'
+  - var current = 'Банкінг'
   - var current_iclass = 'bank'
   include _nav.pug
 
