--- a/includes/social.pug
+++ b/includes/social.pug
@@ -4,7 +4,7 @@ block title
   title Соціум - ЗАКЛАДКИ - Список популярних сайтів (ТОП ЗАКЛАДКИ)
   
 block menu
-  - var current = 'Социум'
+  - var current = 'Соціум'
   - var current_iclass = 'social'
   include _nav.pug
   
@@ -79,18 +79,6 @@ block content
             a(href='https://www.livejournal.com/', target='_blank') Livejournal.com
       .group
         .group-title
-          span.badge.badge-success Соціальні мережі - россія
-        ul
-          li
-            div.icon.vk.com
-            a(href='https://vk.com/', target='_blank') ВКонтакте
-            div.icontoo.a0VPN1(title='Для роботи потрібний VPN', alt='')
-          li
-            div.icon.ok.ru
-            a(href='https://ok.ru/', target='_blank') Однокласники
-            div.icontoo.a0VPN1(title='Для роботи потрібний VPN', alt='')
-      .group
-        .group-title
           span.badge.badge-success Соціальні мережі - Україна
         ul
           li
@@ -111,6 +99,18 @@ block content
           li
             div.icon.odnogrupniki.com.ua
             a(href='https://odnogrupniki.com.ua/reg32138', target='_blank') Odnogrupniki.com.ua`
+      .group
+        .group-title
+          span.badge.badge-success Соціальні мережі - россія
+        ul
+          li
+            div.icon.vk.com
+            a(href='https://vk.com/', target='_blank') ВКонтакте
+            div.icontoo.a0VPN1(title='Для роботи потрібний VPN', alt='')
+          li
+            div.icon.ok.ru
+            a(href='https://ok.ru/', target='_blank') Однокласники
+            div.icontoo.a0VPN1(title='Для роботи потрібний VPN', alt='')
           // тут реклама от ГУГЛ - 3 колонки 320+50
             script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
           ins.adsbygoogle(style='display:inline-block;width:320px;height:50px', data-ad-client='ca-pub-3065705668384801', data-ad-slot='5338066053')
@@ -120,7 +120,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-success Електронна пошта - Зарубіж
+          span.badge.badge-success Електронні скриньки - Зарубіж
         ul
           li
             div.icon.gmail
@@ -136,22 +136,7 @@ block content
             a(href='https://login.yahoo.com/', target='_blank') yahoo.com
       .group
         .group-title
-          span.badge.badge-success Електронна пошта - росія
-        ul
-          li
-            div.icon.mail.yandex.ua
-            a(href='https://mail.yandex.ua/', target='_blank') mail.yandex.ua
-            div.icontoo.a0VPN1(title='Для роботи потрібний VPN', alt='')
-          li
-            div.icon.e.mail.ru
-            a(href='https://e.mail.ru/login', target='_blank') e.mail.ru
-            div.icontoo.a0VPN1(title='Для роботи потрібний VPN', alt='')
-          li
-            div.icon.mail.rambler.ru
-            a(href='https://mail.rambler.ru/', target='_blank') mail.rambler.ru
-      .group
-        .group-title
-          span.badge.badge-success Електронна пошта - Україна
+          span.badge.badge-success Електронні скриньки - Україна
         ul
           li
             div.icon.mail.ukr.net
@@ -174,6 +159,21 @@ block content
           li
             div.icon.mail.ex.ua
             a(href='https://mail.ex.ua/', target='_blank') mail.ex.ua
+      .group
+        .group-title
+          span.badge.badge-success Електронні скриньки - росія
+        ul
+          li
+            div.icon.mail.yandex.ua
+            a(href='https://mail.yandex.ua/', target='_blank') mail.yandex.ua
+            div.icontoo.a0VPN1(title='Для роботи потрібний VPN', alt='')
+          li
+            div.icon.e.mail.ru
+            a(href='https://e.mail.ru/login', target='_blank') e.mail.ru
+            div.icontoo.a0VPN1(title='Для роботи потрібний VPN', alt='')
+          li
+            div.icon.mail.rambler.ru
+            a(href='https://mail.rambler.ru/', target='_blank') mail.rambler.ru
           // тут реклама от ГУГЛ - 3 колонки 320+50
             script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
           ins.adsbygoogle(style='display:inline-block;width:320px;height:50px', data-ad-client='ca-pub-3065705668384801', data-ad-slot='5338066053')
