--- a/includes/media.pug
+++ b/includes/media.pug
@@ -34,6 +34,7 @@ block content
           //-     div.icontooinfo.a0youtubeinform(title='Видеоинструкция. Как скачать', alt='')
           
           li
+            // тут код плеера
             iframe(
               width="560"
               height="315"
