edit kod player

--- a/includes/media.pug
+++ b/includes/media.pug
@@ -34,15 +34,7 @@ block content
           //-     div.icontooinfo.a0youtubeinform(title='Видеоинструкция. Как скачать', alt='')
           
           li
-            // тут код плеера
-            iframe(
-              width="560"
-              height="315"
-              src="https://www.youtube.com/embed/videoseries?list=PLkF1vM_kexQA-dC1jsQfgM8VFHdWabcGl"
-              frameborder="0"
-              allow="autoplay; encrypted-media"
-              allowfullscreen
-            )
+            iframe(width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLkF1vM_kexQA-dC1jsQfgM8VFHdWabcGl" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen)
 
           li
             div.icon.web.telegram.org
