--- a/includes/media.pug
+++ b/includes/media.pug
@@ -34,7 +34,8 @@ block content
           //-     div.icontooinfo.a0youtubeinform(title='Видеоинструкция. Как скачать', alt='')
           
           li
-            iframe(width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLkF1vM_kexQA-dC1jsQfgM8VFHdWabcGl" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen)
+            // тут код плеера
+            iframe(width='560', height='315', src='https://www.youtube.com/playlist?list=PLkF1vM_kexQA-dC1jsQfgM8VFHdWabcGl', frameborder='0', allow='autoplay; encrypted-media', allowfullscreen='')
 
           li
             div.icon.web.telegram.org
