--- a/includes/media.html
+++ b/includes/media.html
@@ -77,7 +77,8 @@
                 <div class="group-title"><span class="badge badge-warning">Плеєр.ТОП.ЗАКОРДОН (playlist.2020.01)</span></div>
                 <ul>
                   <li>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLkF1vM_kexQA-dC1jsQfgM8VFHdWabcGl" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    <!-- тут код плеера-->
+                    <iframe width="560" height="315" src="https://www.youtube.com/playlist?list=PLkF1vM_kexQA-dC1jsQfgM8VFHdWabcGl" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
                   </li>
                   <li>
                     <div class="icon web telegram org"></div><a>Ще музика:  </a><a href="https://t.me/music_hitok" target="_blank">_music_HitOK_</a><i class="fainfo fab fa-telegram"></i>
