--- a/includes/media.pug
+++ b/includes/media.pug
@@ -35,9 +35,7 @@ block content
           
           li
             // тут код плеера
-            #player_zap(style='height:60px;width:240px')
-              script.
-                var player_zap = new Playerjs({id:"player_zap", file:"https://zakladki.github.io/playlist1zap.txt"});
+            iframe(width='560', height='315', src='https://www.youtube.com/playlist?list=PLkF1vM_kexQA-dC1jsQfgM8VFHdWabcGl', frameborder='0', allow='autoplay; encrypted-media', allowfullscreen='')
 
           li
             div.icon.web.telegram.org
