--- a/includes/media.pug
+++ b/includes/media.pug
@@ -140,7 +140,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-warning Плеєр.ТОП.РУСЬКА (playlist.2020.01)
+          span.badge.badge-warning Плеєр.ТОП.УКРАЇНСЬКА (playlist.2025.01)
         ul
           
           //- li
