--- a/includes/media.pug
+++ b/includes/media.pug
@@ -13,7 +13,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-warning Плеєр.ТОП.ЗАКОРДОН (playlist.2020.01)
+          span.badge.badge-warning Плеєр.ТОП.УКРАЇНСЬКА (playlist.2025.01)
         ul
           
           //- li
@@ -35,7 +35,7 @@ block content
           
           li
             // тут код плеера
-            iframe(width='240', height='135', src='https://www.youtube.com/embed/videoseries?list=PLkF1vM_kexQA-dC1jsQfgM8VFHdWabcGl', frameborder='0', allow='autoplay; encrypted-media', allowfullscreen='')
+            iframe(width='240', height='135', src='https://www.youtube.com/embed/videoseries?list=PLCbt8rNMaiwHl9brI0ggRrnvir9q8kSmA', frameborder='0', allow='autoplay; encrypted-media', allowfullscreen='')
 
           li
             div.icon.web.telegram.org
@@ -79,7 +79,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-warning Плеєр.ТОП.УКРАЇНСЬКА (playlist.2020.01)
+          span.badge.badge-warning Плеєр.ТОП.ПАТРІОТИЧНІ (playlist.2025.01)
         ul
           
           //- li
@@ -95,7 +95,7 @@ block content
           
           li
             // тут код плеера
-            iframe(width='240', height='135', src='https://www.youtube.com/embed/videoseries?list=PLkF1vM_kexQA-dC1jsQfgM8VFHdWabcGl', frameborder='0', allow='autoplay; encrypted-media', allowfullscreen='')
+            iframe(width='240', height='135', src='https://www.youtube.com/embed/videoseries?list=PLCbt8rNMaiwH0crotsDppzWMkODGmAl2n', frameborder='0', allow='autoplay; encrypted-media', allowfullscreen='')
 
           li
             div.icon.web.telegram.org
@@ -140,7 +140,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-warning Плеєр.ТОП.УКРАЇНСЬКА (playlist.2025.01)
+          span.badge.badge-warning Плеєр.ТОП.ІНШІ (playlist.2025.01)
         ul
           
           //- li
