--- a/includes/media.pug
+++ b/includes/media.pug
@@ -40,7 +40,7 @@ block content
           li
             div.icon.web.telegram.org
             a() Ще музика:  
-            a(href='https://t.me/music_hitok', target='_blank') _music_HitOK_
+            a(href='https://t.me/music_hitok_ua', target='_blank') _music_HitOK_UA
             i.fainfo.fab.fa-telegram
             
       .group
@@ -161,7 +161,7 @@ block content
           li
             div.icon.web.telegram.org
             a() Ще музика:  
-            a(href='https://t.me/music_hitok_ru', target='_blank') _music_HitOK_RU
+            a(href='https://t.me/websis_music', target='_blank') _music_WebSIS_
             i.fainfo.fab.fa-telegram
 
       .group
